[package]
name = "image-organizer"
version = "0.1.0"
edition = "2021"
description = "Simple command to organize your photo/video library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
kamadak-exif = "0.5.5"
filetime = "0.2"